* 2014-08-14 - martin.herfurth@open-xchange.com

 - Fix for bug 34041: Ignore additional elements in autoconfig xml.

* 2014-08-08 - martin.herfurth@open-xchange.com

 - Fix for bug 30599: Ical export stumbles over bad reccurring appointment.

* 2014-08-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 33914: Corrected parameter index when dropping the +/- variants of user capabilities

* 2014-08-06 - steffen.templin@open-xchange.com

 - Fix for bug 33918: Translate display names of subscription sources only if necessary

* 2014-08-04 - marcus.klein@open-xchange.com

 - Fix for bug 33891: Removed superfluous line throwing always an exception.

* 2014-08-01 - thorben.betten@open-xchange.com

 - Fix for bug 33715: Accept new parameter "attach_src" for action=get request to let the client signal RFC822 source is supposed to be
                      attached to generated JSON mail representation
 - Fix for bug 33850: Keep "Message-Id" header on message transport

* 2014-07-31 - thorben.betten@open-xchange.com

 - Fix for bug 33839: Escape site information when generating the publication site from selected template

* 2014-07-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 33652: Also accept "updateToken" requests without service identifier 
 - Fix for bug 30654: Try fallback based on the file extension in case there's no preview service for mime type 

* 2014-07-22 - thorben.betten@open-xchange.com

 - Fix for bug 33441: Fixed calculation of "max-age" part in Cache-Control header from given expiry value
 - Fix for bug 31253: Quote-aware parsing of SIEVE script content + reverted changes from commit d695ca1965fbcb98b94ab6705962a2e9201fae3c

* 2014-07-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 33447: Corrected the 'exclude context admin' condition in the search term passed down to the storage layer

* 2014-07-11 - thorben.betten@open-xchange.com
