@@ -2,6 +2,10 @@
 
  - Fix for bug 34041: Ignore additional elements in autoconfig xml.
 
+* 2014-08-13 - martin.herfurth@open-xchange.com
+
+- Fix for bug 34023: Default display message for category user input.
+
 * 2014-08-08 - martin.herfurth@open-xchange.com
 
  - Fix for bug 30599: Ical export stumbles over bad reccurring appointment.
